--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CatalogoCXC/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CatalogoCXC/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.CuentasPorCobrar.cxc_Catalogo_Info
 @{
     ViewBag.Title = "Consulta de catálogos de cuentas por cobrar";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,8 +10,10 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdCatalogo_tipo, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_catalogocxc")
+    @Html.Action("GridViewPartial_catalogocxc", new { Nuevo = ViewBag.Nuevo })
 
     <div class="box-footer">
         <a class="btn btn-default" href="@Url.Action("Index","CatalogoTipoCXC",new { Area = "CuentasPorCobrar" },null)">Volver</a>
