--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CatalogoTipoCXC/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CatalogoTipoCXC/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.CuentasPorCobrar.cxc_CatalogoTipo_Info
 @{
     ViewBag.Title = "Consulta de tipo de catálogo de cuentas por cobrar";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,8 +10,9 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_catalogotipocxc")
+    @Html.Action("GridViewPartial_catalogotipocxc", new { Nuevo = ViewBag.Nuevo })
 
 
 }
