--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.CuentasPorCobrar.cxc_cobro_Info
 @{
-    ViewBag.Title = ("Anular cobro" + " con ID #" + @Model.IdCobro);
+    ViewBag.Title = ("Consultar cobro" + " con ID #" + @Model.IdCobro);
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -8,11 +8,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script src="~/Scripts/ScriptsGenerales.js"></script>
 
 <script type="text/javascript">
     var selectedIDs;
 
     $(function () {
+
         $("#IdCobro_tipo").change(function () {
             SetCobroTipo();
         });
@@ -43,10 +45,36 @@
     }
     function OnSelectionChanged(s, e) {
         s.GetSelectedFieldValues("secuencia", GetSelectedFieldValuesCallback);
+        s.GetSelectedFieldValues("Saldo", GetSelectedFieldValuesCallback_Saldo);
     }
     function GetSelectedFieldValuesCallback(values) {
         //Capture all selected keys
         selectedIDs = values.join(',');
+    }
+
+    function GetSelectedFieldValuesCallback_Saldo(values) {
+        TotalRows = values.join(',');
+
+        var datos = {
+            TotalRows: TotalRows
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("SumarValorItems", "Cobranza", new { Area = "CuentasPorCobrar" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#TotalRows").html("Total: $" + data);
+
+            },
+            error: function (error) {
+            }
+        });
+
     }
 
     function MostrarModal() {
@@ -54,14 +82,37 @@
             alert("Debe ingresar el total a cobrar");
             return;
         }
+        else{
+            selectedIDs = "";
+            var datos = {
+                IdTransaccionSession: $("#IdTransaccionSession").val(),
+                IdEmpresa: $("#IdEmpresa").val(),
+                IdSucursal: $("#IdSucursal").val(),
+                IdCliente: IdCliente.GetValue()
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("GetListFacturas_PorIngresar", "Cobranza", new { Area = "CuentasPorCobrar" })',
+                async: false,
+                bDeferRender: true,
+                bProcessing: true,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    console.log(data);
+                    GridView_cobranza_facturas_x_cruzar.PerformCallback();
+                    GridView_cobranza_facturas_x_cruzar.UnselectRows();
+                    $("#FacturasModal").modal("show");
 
-        selectedIDs = "";
-        GridView_cobranza_facturas_x_cruzar.PerformCallback();
-        GridView_cobranza_facturas_x_cruzar.UnselectRows();
-        $("#FacturasModal").modal("show");
+                },
+                error: function (error) {
+                }
+            });
+        }
     }
 
-      function AddFacturas() {
+    function AddFacturas() {
 
         var datos = {
             IDs: selectedIDs,
@@ -135,13 +186,25 @@
         });
         GridView_cobranza_det.PerformCallback();
     }
+
+  function Imprimir() {
+        var location = GetPathServer();
+        var win = window.open(location +"/Reportes/CuentasPorCobrarReportes/CXC_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdSucursal="+@Model.IdSucursal+"&IdCobro="+@Model.IdCobro, '_blank');
+        win.focus();
+    }
 </script>
 
 
-@using (Html.BeginForm("Anular", "Cobranza", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Modificar", "Cobranza", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdSucursal)
+    @Html.HiddenFor(q => q.IdCobro)
+    @Html.HiddenFor(q => q.IdCobro_tipo)
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
     if (@ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -150,6 +213,46 @@
             </h4>
         </div>
     }
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-9 col-md-1">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","Cobranza",new { Area = "CuentasPorCobrar", IdEmpresa=Model.IdEmpresa },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "Cobranza", new { Area = "CuentasPorCobrar", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdCobro=Model.IdCobro }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "Cobranza", new { Area = "CuentasPorCobrar", IdEmpresa = Model.IdEmpresa, IdSucursal=Model.IdSucursal, IdCobro=Model.IdCobro }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="modal fade" id="FacturasModal" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
@@ -157,6 +260,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Facturas</h4>
+                    <h4 id="TotalRows" align="right"></h4>
                 </div>
                 <div class="modal-body">
 
@@ -171,11 +275,6 @@
 
         </div>
     </div>
-
-    @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdSucursal)
-    @Html.HiddenFor(q => q.IdCobro)
-    @Html.HiddenFor(q => q.IdCobro_tipo)
     <div class="row">
         <div class="col-md-8">
             <div class="col-md-12">
@@ -192,16 +291,19 @@
                     @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="IdCobro_tipo">Tipo cobro*</label>
-                    @Html.DropDownListFor(q => q.IdCobro_tipo, new SelectList(ViewBag.lst_cobro_tipo, "IdCobro_tipo", "tc_descripcion"), new { @class = "form-control", @id = "IdCobro_tipo", @disabled = "disabled" })
-                    @Html.ValidationMessageFor(q => q.IdCobro_tipo, "", new { @class = "text-danger" })
+            @if (!String.IsNullOrEmpty(Model.IdCobro_tipo))
+            {
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="IdCobro_tipo">Tipo cobro*</label>
+                        @Html.DropDownListFor(q => q.IdCobro_tipo, new SelectList(ViewBag.lst_cobro_tipo, "IdCobro_tipo", "tc_descripcion"), new { @class = "form-control", @id = "IdCobro_tipo" })
+                        @Html.ValidationMessageFor(q => q.IdCobro_tipo, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
+            }
         </div>
         <div class="col-md-4">
-            <div class="col-md-offset-6 col-md-6">
+            <div class="col-md-6">
                 <div class="form-group">
                     <label for="cr_fecha">Fecha*</label>
                     @Html.DevExpress().DateEditFor(q=> q.cr_fecha, settings =>
@@ -217,28 +319,36 @@
                     @Html.ValidationMessageFor(q => q.cr_fecha, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="IdCaja">Caja*</label>
-                    @Html.DropDownListFor(q => q.IdCaja, new SelectList(ViewBag.lst_caja, "IdCaja", "ca_Descripcion"), new { @class = "form-control", @id = "IdCaja" })
-                    @Html.ValidationMessageFor(q => q.IdCaja, "", new { @class = "text-danger" })
+            <div class="col-md-3">
+                <label for="IdNuevo"></label>
+                <div class="form-group">                    
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="cr_TotalCobro">Total*</label>
-                    @Html.TextBoxFor(q => q.cr_TotalCobro, new { @id = "cr_TotalCobro", @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.cr_TotalCobro, "", new { @class = "text-danger" })
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="IdCaja">Caja*</label>
+                        @Html.DropDownListFor(q => q.IdCaja, new SelectList(ViewBag.lst_caja, "IdCaja", "ca_Descripcion"), new { @class = "form-control", @id = "IdCaja" })
+                        @Html.ValidationMessageFor(q => q.IdCaja, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="cr_TotalCobro">Total*</label>
+                        @Html.TextBoxFor(q => q.cr_TotalCobro, new { @id = "cr_TotalCobro", @class = "form-control" })
+                        @Html.ValidationMessageFor(q => q.cr_TotalCobro, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="cr_Excedente">ValorExcedente</label>
+                        @Html.TextBoxFor(q => q.cr_Excedente, new { @id = "cr_Excedente", @class = "form-control", @readonly = "readonly" })
+                        @Html.ValidationMessageFor(q => q.cr_Excedente, "", new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="cr_Excedente">Saldo</label>
-                    @Html.TextBoxFor(q => q.cr_Excedente, new { @id = "cr_Excedente", @class = "form-control", @readonly = "readonly" })
-                    @Html.ValidationMessageFor(q => q.cr_Excedente, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
     </div>
     <div class="row" id="div_cheque" hidden>
         <div class="col-md-12">
@@ -286,12 +396,10 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group has-error">
-                    <label for="MotivoAnulacion">Motivo Anulacion</label>
-                    @Html.TextAreaFor(q => q.MotiAnula, new { @class = "form-control", @id = "MotivoAnulacion", @rows = 1 })
-                    @Html.ValidationMessageFor(q => q.MotiAnula, "", new { @class = "text-danger" })
-                </div>
+            <div class="col-md-3">
+                <button type="button" class="btn btn-primary" title ="Buscar facturas" id="btn_buscar" onclick="MostrarModal();">
+                    <i class="fa fa-search"></i>
+                </button>
             </div>
         </div>
     </div>
@@ -299,15 +407,31 @@
     @Html.Action("GridViewPartial_cobranza_det")
 
 
+
     <div class="box-footer">
-    @if (ViewBag.MostrarBoton ?? false)
-    {
-        <button type="submit" class="btn btn-danger">Anular</button>
-    }
         <a class="btn btn-default" href="@Url.Action("Index", "Cobranza", new { Area = "CuentasPorCobrar" }, null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+<script type="text/javascript">
+    $(function () {
+        MostrarBotonesAccion();
+    });
 
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
+    }
+</script>
