--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.CuentasPorCobrar.cxc_LiquidacionRetProv_Info
 @{
-    ViewBag.Title = "Modificar liquidacion de retenciones a clientes";
+    ViewBag.Title = "Consultar liquidacion de retenciones a clientes";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -113,7 +113,10 @@
     @Html.HiddenFor(q => q.IdLiquidacion, new { @id = "IdLiquidacion" })
     @Html.HiddenFor(q => q.IdTipoCbte, new { @id = "IdTipoCbte" })
     @Html.HiddenFor(q => q.IdCbteCble, new { @id = "IdCbteCble" })
-            
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
+
     if (@ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -131,6 +134,38 @@
             </h4>
         </div>
     }
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-9 col-md-1">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","LiquidacionRetencionCliente",new { Area = "CuentasPorCobrar", IdEmpresa=Model.IdEmpresa, IdSucursal=Model.IdSucursal },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "LiquidacionRetencionCliente", new { Area = "CuentasPorCobrar", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdLiquidacion=Model.IdLiquidacion }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "LiquidacionRetencionCliente", new { Area = "CuentasPorCobrar", IdEmpresa = Model.IdEmpresa, IdSucursal=Model.IdSucursal, IdLiquidacion=Model.IdLiquidacion }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="modal fade" id="LiquidacionModal" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
@@ -247,14 +282,30 @@
         </div>
     </div>
     <div class="box-footer">
-        @if (ViewBag.MostrarBoton ?? false)
-        {
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        }
         <a class="btn btn-default" href="@Url.Action("Index", "LiquidacionRetencionCliente", new { Area = "CuentasPorCobrar" }, null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+<script type="text/javascript">
+    $(function () {
+        MostrarBotonesAccion();
+    });
+
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
+    }
+</script>
 
