--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Index.cshtml
@@ -11,6 +11,8 @@
 
 @using (Html.BeginForm("Index", "LiquidacionRetencionCliente", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -100,7 +102,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_LiquidacionRetencionCliente", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal})
+            @Html.Action("GridViewPartial_LiquidacionRetencionCliente", new { Nuevo = ViewBag.Nuevo })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
