--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.CuentasPorCobrar.cxc_LiquidacionTarjeta_Info
 @{
-    ViewBag.Title = ("Modificar liquidación de tarjeta de crédito" + " con ID #" + @Model.IdLiquidacion);
+    ViewBag.Title = ("Consultar liquidación de tarjeta de crédito" + " con ID #" + @Model.IdLiquidacion);
     Layout = "~/Views/Shared/_Layout.cshtml";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
@@ -126,6 +126,9 @@
     @Html.HiddenFor(q => q.IdTipoCbte_ct)
     @Html.HiddenFor(q => q.IdCbteCble_ct)
 
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -260,10 +263,6 @@
         </div>
 
         <div class="box-footer">
-            @if (ViewBag.MostrarBoton ?? false)
-            {
-            <button type="submit" class="btn btn-primary">Guardar</button>
-            }
             <a class="btn btn-default" href="@Url.Action("Index", "LiquidacionTarjetaCredito", new { Area = "CuentasPorCobrar" }, null)">Cancelar</a>
         </div>
         @section Scripts {
