--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/ParametroCXC/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/ParametroCXC/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.CuentasPorCobrar.cxc_MotivoLiquidacionTarjeta_Info
 @{
-    ViewBag.Title = "Anular motivo de liquidación";
+    ViewBag.Title = "Modificar motivo de liquidación";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -8,7 +8,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Anular", "MotivoLiquidacion", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Modificar", "MotivoLiquidacion", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
 
     @Html.HiddenFor(q => q.IdEmpresa)
@@ -60,17 +60,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group has-error">
-                    <label for="MotivoAnulacion">Motivo Anulacion</label>
-                    @Html.TextAreaFor(q => q.MotivoAnulacion, new { @class = "form-control", @id = "MotivoAnulacion", @rows = 1 })
-                    @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -82,7 +72,7 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+        <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","MotivoLiquidacion",new { Area = "CuentasPorCobrar" },null)">Cancelar</a>
     </div>
 
