--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.CuentasPorCobrar.cxc_cobro_tipo_Info
 @{
     ViewBag.Title = "Consulta de tipos de cobro";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,5 +10,8 @@
 
 @using (Html.BeginForm())
 {
-    @Html.Action("GridViewPartial_tipocobro")
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+
+    @Html.Action("GridViewPartial_tipocobro", new { Nuevo = ViewBag.Nuevo })
 }
