--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/_GridViewPartial_tipocobro.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/_GridViewPartial_tipocobro.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_tipocobro";
-        settings.CallbackRouteValues = new { Controller = "TipoCobro", Action = "GridViewPartial_tipocobro" };
+        settings.CallbackRouteValues = new { Controller = "TipoCobro", Action = "GridViewPartial_tipocobro", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdCobro_tipo";
         settings.Width = Unit.Percentage(100);
 
@@ -61,20 +61,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdCobro_tipo = DataBinder.Eval(tc.DataItem, "IdCobro_tipo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdCobro_tipo = DataBinder.Eval(tc.DataItem, "IdCobro_tipo") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdCobro_tipo = DataBinder.Eval(tc.DataItem, "IdCobro_tipo") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -94,6 +92,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
