--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Core.Erp.Web.Helps
+﻿@model Core.Erp.Info.CuentasPorPagar.cp_proveedor_Info
+@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Consulta de proveedores";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,12 +11,15 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+
     <div class="row">
         <div class="col-md-12">
             <a class="btn btn-primary" href="@Url.Action("Importar","Proveedor",new { Area = "CuentasPorPagar", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
         </div>
     </div>
 
-@Html.Action("GridViewPartial_proveedor")
+@Html.Action("GridViewPartial_proveedor", new { Nuevo = ViewBag.Nuevo })
 
 }
