--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoCodigoSRI/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoCodigoSRI/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Core.Erp.Info.CuentasPorPagar.cp_codigo_SRI_tipo_Info
+@{
     ViewBag.Title = "Consulta de tipos de códigos SRI";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
@@ -8,6 +9,7 @@
 }
 @using (Html.BeginForm())
 {
+
 @Html.Action("GridViewPartial_tipo_codigo_sri")
 }
 
