--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_012.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_012.cshtml
@@ -8,7 +8,7 @@
         Response.Redirect("~/Account/Login");
     }
 }
-
+<script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 <script type="text/javascript">
     var textSeparator = ";";
     function updateText() {
