--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_002.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_002.cshtml
@@ -9,6 +9,7 @@
         Response.Redirect("~/Account/Login");
     }
 }
+<script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 <script type="text/javascript">
     var textSeparator = ";";
     function updateText() {
