--- a/ERP/Core.Erp.Web/Views/Home/Index.cshtml
+++ b/ERP/Core.Erp.Web/Views/Home/Index.cshtml
@@ -10,6 +10,24 @@
     <a class="btn btn-primary" href="@Url.Action("Consulta","ReportesPorUsuario",new { Area = "General" },null)">Reportes</a>
 </div>
 <hr />
+<script type="text/javascript">
+    function OnLoadingPanelInit(s, e) {
+        s.Show();
+        setTimeout(function () {
+            lp.Hide();
+        }, 1000);
+    }
+    function OnLabelInit(s, e) {
+        //Hide
+        //lp.Hide();
+        //Hide After Timeout
+        setTimeout(function () {
+            lp.Hide();
+        }, 3000);
+    }
+</script>
+
+
     
     @Html.DevExpress().TreeView(settings =>
     {
@@ -17,5 +35,5 @@
         settings.EnableHotTrack = true;
         var Nodes = new List<Core.Erp.Info.SeguridadAcceso.seg_Menu_x_Empresa_x_Usuario_Info>();
         Core.Erp.Web.Areas.SeguridadAcceso.Controllers.MenuPorEmpresaPorUsuarioController.CreateTreeViewNodesRecursive(Nodes, settings.Nodes, 0, (Core.Erp.Web.Helps.SessionFixed.IdEmpresa == null ? 0 : Convert.ToInt32(Core.Erp.Web.Helps.SessionFixed.IdEmpresa)), string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) ? "" : Core.Erp.Web.Helps.SessionFixed.IdUsuario);
-
+        //settings.ClientSideEvents.Init = "OnLabelInit";
     }).GetHtml()
